--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
   </head>
     <body>
       <?..konten yang terlihat oleh pengunjung akan ada disini..>
-    </body>
-</hmtl>
+
 <img src=fotoprofil.jpg alt="foto profil saya>
   <hl>Nama Lengkap Anda <hl>
-  <p>siswa SMA yang tertarik dengan teknologi dan desain.
-  Selamat datang di website pertama saya !</p>
-  <a
-  hrefa<https:
-
+  <p>siswa SMA yang tertarik dengan teknologi dan desain. Selamat datang di website pertama saya !</p>
+  <a href=""https://www.instagram.com/Lailatulnjm18">kunjungi instagram saya</a>
+  <button id="sapaButton">Sapa saya</button>
+</div>
+<script src="script.js<>/script>
+  </body>
+  </hyml>
+  
 
   
 
