--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <hmtl>
   <head>
    <title>profil saya</title>
-  </head>
+    <link rel="stylesheet" href="style.css"
+    </head>
     <body>
-      <?..konten yang terlihat oleh pengunjung akan ada disini..>
-
+       <div class="kartu-profil">
 <img src=fotoprofil.jpg alt="foto profil saya>
   <hl>Nama Lengkap Anda <hl>
   <p>siswa SMA yang tertarik dengan teknologi dan desain. Selamat datang di website pertama saya !</p>
